# docs/swagger.yaml
@@ -27,6 +27,13 @@ definitions:
       id:
         type: string
     type: object
+  rest.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   rest.TaskResponse:
     properties:
       created_at:
@@ -374,6 +381,38 @@ paths:
               type: string
             type: object
       summary: Get user by id
+      tags:
+      - users
+  /users/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user
+      parameters:
+      - description: request body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/rest.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Login user
       tags:
       - users
 swagger: "2.0"
